[package]
edition = "2021"
name = "srt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deepgram = "0.2"
reqwest = {version = "0.11.7", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
time = {version = "0.3.11", features = ["formatting", "macros"]}
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = {version = "0.17", features = ["native-tls"]}
tokio-util = {version = "0.7.1", features = ["codec", "io"]}
uuid = {version = "1", features = ["serde"]}
